# smirk

./: .env  .envrc  .gitignore  .gitmodules  Makefile  README.md  build.sh  cabal.project  code.txt  default.nix  pkgs.nix  shell.nix
.github/workflows/: cicd.yml
arduino/: .gitignore  Makefile  build.sh  smirk.ino
arduino/lib/: ArduinoJson  ArduinoStreamUtils  IRLib2  IRLibFreq  IRLibProtocols  IRLibRecv  IRLibRecvPCI
captain/: smirk-captain.cabal
captain/app/: Main.hs
captain/src/Smirk/: Captain.hs  Prelude.hs  Types.hs
captain/src/Smirk/Captain/: Api.hs  Env.hs  MateStore.hs  Server.hs  SmirkM.hs
captain/src/Smirk/Captain/Pair/: Api.hs  Server.hs
captain/src/Smirk/Captain/Register/: Api.hs  Class.hs  Server.hs
captain/src/Smirk/Mate/: Api.hs  Client.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
firmware/: platformio.ini
firmware/lib/Smirk/: IRReceiver.h  IRSendController.cpp  IRSendController.h  IRSender.h  IRSignal.h  Logger.cpp  Logger.h  Smirk.cpp  Smirk.h
firmware/lib/Smirk/IRReceiver/: Mock.cpp  Mock.h
firmware/lib/Smirk/IRSender/: Esp.cpp  Esp.h  Log.cpp  Log.h
firmware/lib/Smirk/IRSignal/: Raw.cpp  Raw.h
firmware/lib/Smirk/Logger/: Print.cpp  Print.h
firmware/src/: main.BasicHttpClient.cpp  main.SimpleServer.cpp  main.Smirk.cpp  main.WiFiScan.cpp  main.WifiManagerAdvanced.cpp  main.WifiManagerBasic.cpp
firmware/test/test_gtest/: test_RawIRSignal.cpp  test_json.cpp  test_main.cpp  test_send.cpp
mate/: platformio.ini
mate/lib/SmirkMate/: IRSender.h  IRSignal.cpp  IRSignal.h  SmirkMate.h
mate/lib/SmirkMate/IRReceiver/: Mock.cpp
mate/lib/SmirkMate/IRSender/: Esp.cpp
mate/lib/SmirkMate/IRSignal/: Raw.cpp  Raw.h
mate/lib/SmirkMate/Logger/: Print.cpp
mate/src/: main.BasicHttpClient.cpp  main.HelloServer.cpp  main.SmirkMate.cpp  main.WiFiScan.cpp  main.WifiManagerBasic.cpp
mate/test/test_gtest/: test_json.cpp  test_main.cpp
nix/: sources.json
scripts/: ci-pio.sh
server/: .dir-locals.el  .gitignore  .hlint.yaml  Main.hs  brittany.yaml  cabal.project  smirk-server.cabal
server/api/: rest.http
server/app/: Main.hs
server/src/: Lib.hs  Smirk.hs
server/src/Capability/: ReaderTVar.hs
server/src/Smirk/: Api.hs  Control.hs  Env.hs  M.hs  Opts.hs  Prelude.hs  Server.hs  SmirkM.hs  Types.hs
server/src/Smirk/Effects/: SerialPort.hs
server/src/Smirk/Register/: Api.hs  Class.hs  Server.hs
server/test/: Spec.hs
