cabal-version:      2.4
name:               smirk-captain
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Brecht Serckx
maintainer:         services+git@brechtserckx.be

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common language
    default-language:    Haskell2010
    default-extensions:
      BangPatterns
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      NumericUnderscores
      OverloadedStrings
      PartialTypeSignatures
      PolyKinds
      QuasiQuotes
      Rank2Types
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns

common opts
    ghc-opts:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wno-deprecations
      -Wredundant-constraints
      -fwrite-ide-info
      -hiedir=.hie
      -fhide-source-paths

library
    import:           language
    exposed-modules:
      Smirk.Prelude
      Smirk.Captain
      Smirk.Captain.Api
      Smirk.Captain.Env
      Smirk.Captain.MateStore
      Smirk.Captain.Pair.Api
      Smirk.Captain.Pair.Server
      Smirk.Captain.Server
      Smirk.Captain.SmirkM
      Smirk.Mate.Api
      Smirk.Mate.Client
      Smirk.Types
    build-depends:
        base ^>=4.16.4.0
      , aeson
      , containers
      , exceptions
      , http-client
      , interpolatedstring-perl6
      , mtl
      , MonadRandom
      , monad-logger
      , servant
      , servant-client
      , servant-client-core
      , servant-server
      , stm
      , text
      , wai
      , wai-extra
      , warp
    hs-source-dirs:   src

executable smirk-captain
    import:           language
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        smirk-captain
    hs-source-dirs:   app
