cabal-version:      2.4
name:               smirk-server
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Brecht Serckx
maintainer:         services+git@brechtserckx.be

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common language
    default-language:    Haskell2010
    default-extensions:
      BangPatterns
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      NumericUnderscores
      OverloadedStrings
      PartialTypeSignatures
      PolyKinds
      QuasiQuotes
      Rank2Types
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns

common opts
    ghc-opts:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wno-deprecations
      -Wredundant-constraints
      -fwrite-ide-info
      -hiedir=.hie
      -fhide-source-paths

library
    import:           language
    exposed-modules:
      Smirk
      Smirk.Api
      Smirk.Env
      Smirk.Prelude
      Smirk.Register.Api
      Smirk.Register.Class
      Smirk.Register.Server
      Smirk.Server
      Smirk.SmirkM
      Smirk.Types
    build-depends:
        base ^>=4.16.4.0
      , aeson
      , containers
      , exceptions
      , mtl
      , MonadRandom
      , servant
      , servant-server
      , stm
      , wai
      , wai-extra
      , warp
    hs-source-dirs:   src

executable smirk-server
    import:           language
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        smirk-server
    hs-source-dirs:   app
